--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+<link rel="stylesheet" type="text/css" href="Style3.css">
 </head>
 <body bgcolor= "brown">
 
@@ -14,7 +15,10 @@
 	<a href="Article3.html"> Article 3 </a> <br>
 	<a href="Article4.html"> Article 4 </a> <br>
 
+	<br><BR>
 
-
+<a href="formulaire.html"> Formulaire d'inscription </a>
+<br> <BR>
+<a href="TP3.html"> TP3 </a>
 </body>
 </html>
